リンクを言語で切り替えられるように

--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
@@ -1,13 +1,14 @@
 {
-  "window.treatment": "Howto",
-  "window.avatar": "Your Avatar",
-  "window.supported_avatars": "Origin Avatar",
-  "window.direct_material": "Directly Material",
-  "window.view_large": "Zoom view",
+  "window.treatment": "Usage and FAQ",
+  "window.avatar": "Avatar",
+  "window.supported_avatars": "Compatible Avatars",
+  "window.direct_material": "Directly Specify Material",
+  "window.view_large": "Nail selecting screen",
   "window.nail_shape": "Nail Shape",
-  "window.nail_material": "Nail Material",
+  "window.nail_material": "Variation",
   "window.nail_color": "Nail Color",
   "window.nail_design": "Nail Design",
+  "window.set_per_finger": "Set for Each Finger",
   "window.left_hand": "Left Hand",
   "window.right_hand": "Right Hand",
   "window.thumb": "Thumb",
@@ -18,16 +19,18 @@
   "window.foot_nail": "Foot Nail",
   "window.left_foot": "Left Foot",
   "window.right_foot": "Right Foot",
-  "window.advanced_setting":"Advanced Setting",
-  "window.remove_origin_nail":"Remove Origin Nail",
-  "window.create_material":"CreateMaterials",
+  "window.advanced_setting":"Detailed Settings",
+  "window.remove_origin_nail":"Remove Original Nail",
+  "window.create_material":"Generate Material",
   "window.backup":"Backup",
-  "window.use_modular_avatar":"Use ModularAvatar",
-  "window.attach_nail":"Attach Nail",
+  "window.use_modular_avatar":"Wear with ModularAvatar",
+  "window.attach_nail":"Wear Nail",
   "window.remove_nail":"Remove Nail",
   "window.contact":"Contact",
   "component.md_nail_object_marker.help_box.info": "component.md_nail_object_marker.help_box.info",
   "component.md_nail_object_marker.help_box.error": "component.md_nail_object_marker.help_box.error",
   "dialog.finished": "Completion",
-  "dialog.finished.success_attach_nail" : "Nails have been fitted."
+  "dialog.finished.success_attach_nail" : "Nails have been fitted.",
+  "link.manual": "https://anlabo.world/en/manual-2/",
+  "link.contact": "https://anlabo.world/en/manual-2/#Contact"
 }
