--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
@@ -5,7 +5,7 @@
   "window.supported_avatars": "対応アバター",
   "window.view_large": "拡大表示",
   "window.nail_shape": "ネイルの形",
-  "window.nail_material": "ネイルマテリアル",
+  "window.nail_material": "バリエーション",
   "window.nail_color": "ネイルカラー",
   "window.nail_design": "ネイルデザイン",
   "window.set_per_finger": "指ごとに設定",
@@ -33,5 +33,7 @@
   "dialog.error": "エラー",
   "dialog.error.select_target_avatar": "対象アバターを設定してください。",
   "dialog.finished": "完了",
-  "dialog.finished.success_attach_nail" : "ネイルの装着が完了しました。"
+  "dialog.finished.success_attach_nail" : "ネイルの装着が完了しました。",
+  "link.manual": "https://anlabo.world/manual/",
+  "link.contact": "https://anlabo.world/manual/#%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6"
 }
