ショップで絞り込み機能の追加

--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
@@ -3,6 +3,7 @@
   "window.avatar": "アバター",
   "window.direct_material": "直接指定マテリアル",
   "window.supported_avatars": "対応アバター",
+  "window.filter_by_shop" : "ショップで絞り込み",
   "window.view_large": "拡大表示",
   "window.nail_shape": "ネイルの形",
   "window.nail_material": "バリエーション",
