--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
@@ -32,5 +32,5 @@
   "dialog.finished": "Completion",
   "dialog.finished.success_attach_nail" : "Nails have been fitted.",
   "link.manual": "https://anlabo.world/en/manual-2/",
-  "link.contact": "https://anlabo.world/en/manual-2/#Contact"
+  "link.contact": "https://anlabo.world/en/manual-2/#FAQ"
 }
