--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
@@ -35,5 +35,5 @@
   "dialog.finished": "完了",
   "dialog.finished.success_attach_nail" : "ネイルの装着が完了しました。",
   "link.manual": "https://anlabo.world/manual/",
-  "link.contact": "https://anlabo.world/manual/#%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6"
+  "link.contact": "https://anlabo.world/manual/#FAQ"
 }
