検索ウィンドウからアバターを選択できるように

--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
@@ -29,6 +29,7 @@
   "window.remove_nail":"ネイルを外す",
   "window.contact":"お問い合わせ",
   "window.favorite_only": "お気に入りのみ",
+  "window.search_avatar": "アバター検索",
   "component.md_nail_object_marker.help_box.info": "このコンポーネントは、MDNailToolで、ネイルを外す際に必要です。削除しないでください。",
   "component.md_nail_object_marker.help_box.error": "このコンポーネントは、ModularAvatarが導入されている環境のみで使用します。削除してください。",
   "dialog.error": "エラー",
