--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
@@ -2,6 +2,7 @@
   "window.treatment": "Usage and FAQ",
   "window.avatar": "Avatar",
   "window.supported_avatars": "Compatible Avatars",
+  "window.filter_by_shop" : "Filter by Shop",
   "window.direct_material": "Directly Specify Material",
   "window.view_large": "Nail selecting screen",
   "window.nail_shape": "Nail Shape",
@@ -27,6 +28,8 @@
   "window.attach_nail":"Wear Nail",
   "window.remove_nail":"Remove Nail",
   "window.contact":"Contact",
+  "window.favorite_only": "Favorite Only",
+  "window.search_avatar": "Search Avatar",
   "component.md_nail_object_marker.help_box.info": "component.md_nail_object_marker.help_box.info",
   "component.md_nail_object_marker.help_box.error": "component.md_nail_object_marker.help_box.error",
   "dialog.finished": "Completion",
