ソート処理実装

--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
@@ -34,6 +34,13 @@
   "component.md_nail_object_marker.help_box.error": "component.md_nail_object_marker.help_box.error",
   "dialog.finished": "Completion",
   "dialog.finished.success_attach_nail" : "Nails have been fitted.",
+  "sort_order.default": "Sort",
+  "sort_order.shop_name_asc": "Shop Name↓",
+  "sort_order.shop_name_desc": "Shop Name↑",
+  "sort_order.avatar_name_asc": "Avatar Name↓",
+  "sort_order.avatar_name_desc": "Avatar Name↑",
+  "sort_order.newer_asc": "Latest",
+  "sort_order.newer_desc": "Oldest",
   "link.manual": "https://anlabo.world/en/manual-2/",
   "link.contact": "https://anlabo.world/en/manual-2/#FAQ"
 }
