--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
@@ -36,6 +36,13 @@
   "dialog.error.select_target_avatar": "対象アバターを設定してください。",
   "dialog.finished": "完了",
   "dialog.finished.success_attach_nail" : "ネイルの装着が完了しました。",
+  "sort_order.default": "並べ替え",
+  "sort_order.shop_name_asc": "ショップ名順↓",
+  "sort_order.shop_name_desc": "ショップ名順↑",
+  "sort_order.avatar_name_asc": "アバター名順↓",
+  "sort_order.avatar_name_desc": "アバター名順↑",
+  "sort_order.newer_asc": "新着順↓",
+  "sort_order.newer_desc": "新着順↑",
   "link.manual": "https://anlabo.world/manual/",
   "link.contact": "https://anlabo.world/manual/#FAQ"
 }
