--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
@@ -42,18 +42,5 @@
   "sort_order.newer_asc": "Latest",
   "sort_order.newer_desc": "Oldest",
   "link.manual": "https://anlabo.world/en/manual-2/",
-  "link.contact": "https://anlabo.world/en/manual-2/#FAQ",
-  "tag.cool" : "Cool",
-  "tag.nuance" : "Nuance",
-  "tag.simple" : "Simple",
-  "tag.elegance" : "Elegance",
-  "tag.cute" : "Cute",
-  "tag.pop" : "Pop",
-  "tag.flashy" : "Flashy",
-  "window.search_nail" : "Search Nail",
-  "window.imported_only" : "Imported Only",
-  "window.not_imported" : "Not Imported",
-  "window.sort.newest" : "Newest",
-  "window.sort.name" : "Name",
-  "window.to_booth_page" : "Booth page"
+  "link.contact": "https://anlabo.world/en/manual-2/#FAQ"
 }
