--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
@@ -44,18 +44,5 @@
   "sort_order.newer_asc": "新着順↓",
   "sort_order.newer_desc": "新着順↑",
   "link.manual": "https://anlabo.world/manual/",
-  "link.contact": "https://anlabo.world/manual/#FAQ",
-  "tag.cool" : "かっこいい",
-  "tag.nuance" : "ニュアンス",
-  "tag.simple" : "シンプル",
-  "tag.elegance" : "上品",
-  "tag.cute" : "かわいい",
-  "tag.pop" : "ポップ",
-  "tag.flashy" : "派手",
-  "window.search_nail" : "ネイル検索",
-  "window.imported_only" : "インポート済み",
-  "window.not_imported" : "未インポート",
-  "window.sort.newest" : "新着順",
-  "window.sort.name" : "名前順",
-  "window.to_booth_page" : "Boothページ"
-  }
+  "link.contact": "https://anlabo.world/manual/#FAQ"
+}
