--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
@@ -28,7 +28,7 @@
   "window.attach_nail":"Wear Nail",
   "window.remove_nail":"Remove Nail",
   "window.contact":"Contact",
-  "window.favorite_only": "Favorite Only",
+  "window.favorite_priority": "Favorite Priority",
   "window.search_avatar": "Search Avatar",
   "component.md_nail_object_marker.help_box.info": "component.md_nail_object_marker.help_box.info",
   "component.md_nail_object_marker.help_box.error": "component.md_nail_object_marker.help_box.error",
@@ -42,5 +42,18 @@
   "sort_order.newer_asc": "Latest",
   "sort_order.newer_desc": "Oldest",
   "link.manual": "https://anlabo.world/en/manual-2/",
-  "link.contact": "https://anlabo.world/en/manual-2/#FAQ"
+  "link.contact": "https://anlabo.world/en/manual-2/#FAQ",
+  "tag.cool" : "Cool",
+  "tag.nuance" : "Nuance",
+  "tag.simple" : "Simple",
+  "tag.elegance" : "Elegance",
+  "tag.cute" : "Cute",
+  "tag.pop" : "Pop",
+  "tag.flashy" : "Flashy",
+  "window.search_nail" : "Search Nail",
+  "window.show_imported" : "Imported Only",
+  "window.show_not_imported" : "Not Imported",
+  "window.sort.newest" : "Newest",
+  "window.sort.name" : "Name",
+  "window.to_booth_page" : "Booth page"
 }
