--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
@@ -28,7 +28,7 @@
   "window.attach_nail":"ネイルをつける",
   "window.remove_nail":"ネイルを外す",
   "window.contact":"お問い合わせ",
-  "window.favorite_only": "お気に入りのみ",
+  "window.favorite_priority": "お気に入り優先",
   "window.search_avatar": "アバター検索",
   "component.md_nail_object_marker.help_box.info": "このコンポーネントは、MDNailToolで、ネイルを外す際に必要です。削除しないでください。",
   "component.md_nail_object_marker.help_box.error": "このコンポーネントは、ModularAvatarが導入されている環境のみで使用します。削除してください。",
@@ -44,5 +44,18 @@
   "sort_order.newer_asc": "新着順↓",
   "sort_order.newer_desc": "新着順↑",
   "link.manual": "https://anlabo.world/manual/",
-  "link.contact": "https://anlabo.world/manual/#FAQ"
-}
+  "link.contact": "https://anlabo.world/manual/#FAQ",
+  "tag.cool" : "かっこいい",
+  "tag.nuance" : "ニュアンス",
+  "tag.simple" : "シンプル",
+  "tag.elegance" : "上品",
+  "tag.cute" : "かわいい",
+  "tag.pop" : "ポップ",
+  "tag.flashy" : "派手",
+  "window.search_nail" : "ネイル検索",
+  "window.show_imported" : "インポート済み",
+  "window.show_not_imported" : "未インポート",
+  "window.sort.newest" : "新着順",
+  "window.sort.name" : "名前順",
+  "window.to_booth_page" : "Boothページ"
+  }
