--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
@@ -55,5 +55,6 @@
   "window.show_not_imported" : "Not Imported",
   "window.sort.newest" : "Newest",
   "window.sort.name" : "Name",
+  "window.sort.usage" : "Usage Count",
   "window.to_booth_page" : "Booth page"
 }
