--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
@@ -57,5 +57,6 @@
   "window.show_not_imported" : "未インポート",
   "window.sort.newest" : "新着順",
   "window.sort.name" : "名前順",
+  "window.sort.usage" : "着用数順",
   "window.to_booth_page" : "Boothページ"
   }
