--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
@@ -17,6 +17,7 @@
   "window.middle_finger": "Middle",
   "window.ring_finger": "Ring",
   "window.little_finger": "Little",
+  "window.hand_nail": "Hand Nail",
   "window.foot_nail": "Foot Nail",
   "window.left_foot": "Left Foot",
   "window.right_foot": "Right Foot",
