--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
@@ -17,6 +17,7 @@
   "window.middle_finger": "中指",
   "window.ring_finger": "薬指",
   "window.little_finger": "小指",
+  "window.hand_nail": "ハンドネイル",
   "window.foot_nail": "フットネイル",
   "window.left_foot": "左足",
   "window.right_foot": "右足",
