--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/en.json
@@ -25,6 +25,7 @@
   "window.remove_origin_nail":"Remove Original Nail",
   "window.create_material":"Generate Material",
   "window.backup":"Backup",
+  "window.enable_scene_preview":"Scene Preview",
   "window.use_modular_avatar":"Wear with ModularAvatar",
   "window.attach_nail":"Wear Nail",
   "window.remove_nail":"Remove Nail",
