--- a/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
+++ b/Packages/world.anlabo.mdnailtool/Resource/Lang/ja.json
@@ -25,6 +25,7 @@
   "window.remove_origin_nail":"元のネイルを外す",
   "window.create_material":"マテリアルを生成する",
   "window.backup":"バックアップ",
+  "window.enable_scene_preview":"着用プレビュー",
   "window.use_modular_avatar":"ModularAvatarにて着用",
   "window.attach_nail":"ネイルをつける",
   "window.remove_nail":"ネイルを外す",
